[tool.poetry]
name = "take-home"
version = "0.1.0"
description = "Basic Flask web application for take home assignment."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.6"
flask = "^3.0.3"
alembic = "^1.11.1"
flask-sqlalchemy = "^3.0.5"
flask-cors = "^4.0.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
